44agu | Fixed API Key going out of box, header color. Python works locally but numpy still doesn't. Added sorting of Accords, Ingredients, and Brands for Fragrance Entry Moderator.

--- a/public/css/header.css
+++ b/public/css/header.css
@@ -142,6 +142,13 @@ body {
     padding: 0;
 }
 
+.navbar-collapse {
+    /* background-color: whitesmoke; */
+    background-color: #fcfaff !important;
+
+    /* background-color: #8167a9; */
+}
+
 .navbar-brand img {
     height: 28px;
     width: auto;
